First edits, mainly readme

--- a/template_04-14-2015.md
+++ b/template_04-14-2015.md
@@ -16,11 +16,19 @@ csl: mee.csl
 bibliography: references.bib
 ---
 
-```{r, echo=FALSE}
-  library(knitcitations); cleanbib()
-  cite_options(citation_format = "pandoc", check.entries=FALSE)
-  library(bibtex)
+
 ```
+## Error: there is no package called 'knitcitations'
+```
+
+```
+## Error: could not find function "cite_options"
+```
+
+```
+## Error: there is no package called 'bibtex'
+```
+
 
 # Abstract
 
@@ -44,39 +52,47 @@ $$ \frac{1}{\sqrt{2\pi}\sigma}e^{-(x-\mu_i)^2/(2\sigma^2)} $$
 
 Tables show also work without problems:
 
-```{r kable, echo=FALSE}
-library(knitr)
 
-x <- rnorm(100)
-y <- 2*x + rnorm(100)
-out <- lm(y ~ x)
-kable(summary(out)$coef,format="markdown", digits=2,
-caption="This is a GLM summary table.")
+```
+## Error: unused argument (caption = "This is a GLM summary table.")
 ```
 
-```{r xtable, results="asis", echo=FALSE, eval=FALSE, message=FALSE}
-library(xtable)
-tab <- xtable(summary(out)$coef, digits=c(0, 2, 2, 1, 2), 
-              caption="This is a GLM summary table.")
-print(tab, type="latex")
-```
+
+
+
 
 As should any graphics:
 
-```{r testPlot, echo=FALSE, fig.cap="Relationship between x and y. The solid line is least-squares linear regression.", fig.width=4, fig.height=4}
-  plot(x, y)
-  abline(out)
-```
+![Relationship between x and y. The solid line is least-squares linear regression.](figure/testPlot.png) 
+
 
 # Results and discussion
 
-When we cite anyone it should work too like R for instance `r citep(citation())`, and we used package knitcitations` `r citep(citation("knitcitations"))`.
+When we cite anyone it should work too like R for instance 
+
+```
+
+Error in eval(expr, envir, enclos) : could not find function "citep"
+
+```
+
+, and we used package knitcitations` 
+
+```
+
+Error in eval(expr, envir, enclos) : could not find function "citep"
+
+```
+
+.
 
 # References
 
-```{r, warning=FALSE, message=FALSE, echo=FALSE} 
-  write.bibtex(file="references.bib")
+
 ```
+## Error: could not find function "write.bibtex"
+```
+
 
 
 
